# str-to-vector

./: .gitignore  README.md  main.py  pyproject.toml
src/: embed.py  fit_corpus.py  log.py  main.py  matplotlib_graph.py  plotlyGraph.py  plotly_graph.py  vector_pipeline.py  vectorizer.py
