[project]
name = "trigh-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "argparse>=1.4.0",
    "colorlog>=6.9.0",
    "dash>=3.0.4",
    "dash-bootstrap-components>=2.0.2",
    "dataset>=1.6.2",
    "datasets>=3.5.1",
    "logging>=0.4.9.6",
    "matplotlib>=3.10.1",
    "nltk>=3.9.1",
    "pandas>=2.2.3",
    "plotly>=6.0.1",
    "scikit-learn>=1.6.1",
    "sentence-transformers>=4.1.0",
    "torch>=2.7.0",
    "umap-learn>=0.5.7",
]
